--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -661,6 +661,9 @@ input, select, textarea {
 			.image.insa::before{
 				width: 30%;
 			}
+			.image.pcsc::before{
+				opacity: 0;
+			}
 
 		.image img {
 			border-radius: 4px;
